--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 # Skip optional dependencies to avoid platform-specific SWC packages
-optional=false
+omit=optional
 
 # Use npm registry
 registry=https://registry.npmjs.org/
