--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm install --no-optional && npm run build",
-  "installCommand": "npm install --no-optional",
+  "buildCommand": "npm install --omit=optional && npm run build",
+  "installCommand": "npm install --omit=optional",
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.js": {
