--- a/.npmrc
+++ b/.npmrc
@@ -5,6 +5,11 @@ omit=optional
 registry=https://registry.npmjs.org/
 
 # Increase timeout for network requests
-fetch-timeout=300000
-fetch-retry-mintimeout=10000
-fetch-retry-maxtimeout=60000
+fetch-timeout=600000
+fetch-retry-mintimeout=20000
+fetch-retry-maxtimeout=120000
+fetch-retries=5
+
+# Network resilience
+maxsockets=50
+max-http-header-size=16384
