--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.468.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "next": "15.4.7",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
